--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,20 +18,21 @@ jobs:
         python-version: '3.x'
     
     - name: Install dependencies
+      working-directory: reset_cursor
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller
         pip install -r requirements.txt
         
-    - name: Build EXE
+    - name: Build Windows EXE
+      working-directory: reset_cursor
       run: |
-        pyinstaller CursorKeepAlive.spec
+        python build.py
         
     - name: Upload Windows artifact
       uses: actions/upload-artifact@v4
       with:
-        name: CursorPro-Windows
-        path: dist/CursorPro.exe
+        name: ResetCursor-Windows
+        path: reset_cursor/dist/windows/*
 
   build-macos-arm64:
     runs-on: macos-latest
@@ -45,20 +46,22 @@ jobs:
         python-version: '3.x'
     
     - name: Install dependencies
+      working-directory: reset_cursor
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller
         pip install -r requirements.txt
         
-    - name: Build MacOS ARM executable
+    - name: Build MacOS package
+      working-directory: reset_cursor
       run: |
-        pyinstaller CursorKeepAlive.spec
+        python build.py
+        chmod +x dist/mac/reset_cursor.command
         
-    - name: Upload MacOS ARM artifact
+    - name: Upload MacOS artifact
       uses: actions/upload-artifact@v4
       with:
-        name: CursorPro-MacOS-ARM64
-        path: dist/CursorPro
+        name: ResetCursor-MacOS
+        path: reset_cursor/dist/mac/*
 
   build-linux:
     runs-on: ubuntu-22.04
@@ -72,52 +75,25 @@ jobs:
         python-version: '3.x'
     
     - name: Install dependencies
+      working-directory: reset_cursor
       run: |
         python -m pip install --upgrade pip
-        pip install pyinstaller
         pip install -r requirements.txt
         
-    - name: Build Linux executable
+    - name: Build Linux package
+      working-directory: reset_cursor
       run: |
-        pyinstaller CursorKeepAlive.spec
+        python build.py
+        chmod +x dist/linux/reset_cursor.sh
         
     - name: Upload Linux artifact
       uses: actions/upload-artifact@v4
       with:
-        name: CursorPro-Linux
-        path: dist/CursorPro
-
-  build-macos-intel:
-    runs-on: macos-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
-
-    - name: Install dependencies
-      run: |
-        arch -x86_64 pip3 install --upgrade pip
-        arch -x86_64 pip3 install pyinstaller
-        arch -x86_64 pip3 install -r requirements.txt
-
-    - name: Build MacOS Intel executable
-      env:
-        TARGET_ARCH: 'x86_64'
-      run: |
-        arch -x86_64 python3 -m PyInstaller CursorKeepAlive.spec
-        
-    - name: Upload MacOS Intel artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: CursorPro-MacOS-Intel
-        path: dist/CursorPro
+        name: ResetCursor-Linux
+        path: reset_cursor/dist/linux/*
 
   create-release:
-    needs: [build-windows, build-macos-arm64, build-linux, build-macos-intel]
+    needs: [build-windows, build-macos-arm64, build-linux]
     runs-on: ubuntu-22.04
     if: startsWith(github.ref, 'refs/tags/')
     
@@ -130,20 +106,16 @@ jobs:
       - name: Create release archives
         run: |
           cd artifacts
-          zip -r CursorPro-Windows.zip CursorPro-Windows/
-          zip -r CursorPro-MacOS-ARM64.zip CursorPro-MacOS-ARM64/
-          zip -r CursorPro-Linux.zip CursorPro-Linux/
-          zip -r CursorPro-MacOS-Intel.zip CursorPro-MacOS-Intel/
-
+          zip -r ResetCursor-Windows.zip ResetCursor-Windows/
+          zip -r ResetCursor-MacOS.zip ResetCursor-MacOS/
+          zip -r ResetCursor-Linux.zip ResetCursor-Linux/
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            artifacts/CursorPro-Windows.zip
-            artifacts/CursorPro-MacOS-ARM64.zip
-            artifacts/CursorPro-Linux.zip
-            artifacts/CursorPro-MacOS-Intel.zip
-
+            artifacts/ResetCursor-Windows.zip
+            artifacts/ResetCursor-MacOS.zip
+            artifacts/ResetCursor-Linux.zip
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
