fix: Improve Windows build process and localization support
- Add UTF-8 encoding support for Windows build workflow
- Update build script to use non-stripping colorama initialization
- Translate build script messages to English for better readability
- Ensure proper character encoding handling during build process

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,10 @@ jobs:
         
     - name: Build Windows EXE
       working-directory: reset_cursor
+      env:
+        PYTHONIOENCODING: utf-8
       run: |
+        chcp 65001
         python build.py
         
     - name: Upload Windows artifact
