feat: Improve build process for ResetCursor
- Add PyInstaller installation to GitHub Actions workflow
- Update build script to dynamically generate executable
- Include additional necessary files in build output
- Enhance cross-platform build script with more file copying

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
       working-directory: reset_cursor
       run: |
         python -m pip install --upgrade pip
+        pip install pyinstaller
         pip install -r requirements.txt
         
     - name: Build Windows EXE
